--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
     "web-vitals": "^2.1.4",
     "webfontloader": "^1.6.28"
   },
+  "peerDependencies": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -62,5 +66,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://192.168.176.23:4000"  
+  "proxy": "http://192.168.59.89:4000"  
 }
